--- a/CalculatorUI/MainWindow.xaml
+++ b/CalculatorUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculatorUI"
         mc:Ignorable="d"
-        Title="Calculator" Height="510" Width="350" Loaded="Window_Loaded" Background="#FF2F2F2F" Foreground="White">
+        Title="Calculator" Height="510" Width="350" Loaded="Window_Loaded" Background="#FF2F2F2F" Foreground="White" ResizeMode="CanMinimize">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -48,7 +48,7 @@
                 Grid.Column="0"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="7" 
                 Click="SevenBtn_Click"/>
@@ -58,7 +58,7 @@
                 Grid.Column="1"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="8" 
                 Click="EightBtn_Click"/>
@@ -68,7 +68,7 @@
                 Grid.Column="2"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="9" 
                 Click="NineBtn_Click"/>
@@ -78,7 +78,7 @@
                 Grid.Column="0"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="4" 
                 Click="FourBtn_Click"/>
@@ -88,7 +88,7 @@
                 Grid.Column="1"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="5" 
                 Click="FiveBtn_Click"/>
@@ -98,7 +98,7 @@
                 Grid.Column="2"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="6" 
                 Click="SixBtn_Click"/>
@@ -108,7 +108,7 @@
                 Grid.Column="0"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="1" 
                 Click="OneBtn_Click"/>
@@ -118,7 +118,7 @@
                 Grid.Column="1"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="2" 
                 Click="TwoBtn_Click"/>
@@ -128,7 +128,7 @@
                 Grid.Column="2"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="3" 
                 Click="ThreeBtn_Click"/>
@@ -138,7 +138,7 @@
                 Grid.Column="1"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF0E0E0E"
                 Foreground="White"
                 Content="0" 
                 Click="ZeroBtn_Click"/>
@@ -148,7 +148,7 @@
                 Grid.Column="3"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="=" 
                 Click="EqualBtn_Click"/>
@@ -158,7 +158,7 @@
                 Grid.Column="3"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="+" 
                 Click="PlusBtn_Click"/>
@@ -168,7 +168,7 @@
                 Grid.Column="4"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="-" 
                 Click="MinusBtn_Click"/>
@@ -178,7 +178,7 @@
                 Grid.Column="4"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="x" 
                 Click="TimesBtn_Click"/>
@@ -188,7 +188,7 @@
                 Grid.Column="4"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="" 
                 Click="DivideBtn_Click"/>
@@ -198,7 +198,7 @@
                 Grid.Column="2"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="," 
                 Click="CommaBtn_Click"/>
@@ -208,7 +208,7 @@
                 Grid.Column="0"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="C" 
                 Click="CBtn_Click"/>
@@ -218,7 +218,7 @@
                 Grid.Column="0"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="" 
                 Click="SqrtBtn_Click"/>
@@ -228,7 +228,7 @@
                 Grid.Column="1"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="" 
                 Click="PowBtn_Click"/>
@@ -238,7 +238,7 @@
                 Grid.Column="2"
                 FontSize="25"
                 FontWeight="Bold"
-                Background="#FF222121"
+                Background="#FF1B1B1B"
                 Foreground="White"
                 Content="" 
                 Click="BackspaceBtn_Click"/>
